# dolphinlog

./: README.md  otterlog.py  setup.cfg  setup.py
dolphinlog/: __main__.py  qsodata.py  version.py
otterlog/: __main__.py  logdata.py  otterlog  otterlog.py  qsodata.py  version.py
