[metadata]
name = dolphinlog
version = attr: dolphinlog.version.__version__
author = xaratustrah
url = https://github.com/xaratustrah/dolphinlog
description = Yet another HAM radio logger using SQLite with ADIF-3 export support.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = HAM, Logging, Amateur Radio, QSO
license = GPLv3
license_files = LICENSE
classifiers =
    Environment :: Console
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Operating System :: OS Independent
    Topic :: Communications :: Ham Radio

[options]
python_requires = >=3.7, <4
packages = find:

[options.entry_points]
console_scripts = 
    dolphinlog = dolphinlog.__main__:main